--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
 </head>
 <body>
 
-<h1>Hangman</h1>
+<img src="assets/images/barnyard.jpg" alt="Barn with animals">
+<h1>Barnyard Hangman</h1>
 
 <div id="container">
 	
